<resources>

    <!--Strings do Menu-->
    <string name="menu_config">Configuraçõe</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_sobre">Sobre o App</string>


    <!--Nome das Activitys-->
    <string name="nome_Principal">Principal</string>
    <string name="nome_Perguntas">Perguntas</string>
    <string name="nome_Pesquisa">Pesquisar</string>
    <string name="nome_Ranking">Ranking</string>
    <string name="nome_Comentario">Comentários</string>
    <string name="nome_Perguntar">Perguntar</string>
    <string name="nome_MinhasPerguntas">Suas Perguntas</string>
    <string name="nome_Perfil">Perfil</string>
    <string name="nome_Recomendadas">Perguntas Recomendadas</string>
    <string name="nome_Cadastro">Cadastro</string>
    <string name="nome_responder">Responder</string>

    <!--Tags-->
    <string name="chkCinema">Cinema</string>
    <string name="chkEsporte">Esporte</string>
    <string name="chkMusica">Música</string>
    <string name="chkHumor">Humor</string>
    <string name="chkCuriosidade">Curiosidade</string>
    <string name="chkSaude">Saude</string>
    <string name="chk18">+18</string>
    <string name="chkOutros">Outros</string>


    <!--STRINGS / TEXTOS-->
    <string name="app_name">Private</string>
    <string name="btnPerguntas">Perguntas</string>
    <string name="btnPesquisa">Pesquisar</string>
    <string name="btnPerguntar">Perguntar</string>
    <string name="configuracoes">Configurações</string>
    <string name="logout">Logout</string>
    <string name="anonimo">Anônimo</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="texto_pergunta">Escreva sua pergunta aqui!</string>
    <string name="texto_tag">Tags</string>
    <string name="texto_responder">Escreva sua resposta aqui!</string>
    <string name="carregando">Carregando...</string>


    <!--STRINGS DO ALISSON-->
    <string-array name="tags">
        <item>Esporte</item>
        <item>Cinema</item>
        <item>Irineu</item>
    </string-array>

    <string-array name="order">
        <item>Nome</item>
        <item>Data</item>
        <item>Dougras</item>
    </string-array>
    <string name="title_activity_login">Entrar</string>

</resources>
