<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perguntar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corSecundaria"
    tools:context="br.com.private_codx.aprivate.views.FazerPergunta"
    android:orientation="vertical">


    <!--Toolbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/toolbar_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_perguntar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/corPrimaria"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nome_Perguntar"
                android:textSize="16sp" />

        </android.support.v7.widget.Toolbar>
    </LinearLayout>


    <!-- Componentes -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1">

        <EditText
            android:id="@+id/editPergunta"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/cinza_claro"
            android:textColor="@color/bg_color"
            android:hint="@string/texto_pergunta"
            android:textColorHint="@color/bg_color"
            android:textAlignment="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
    </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/linear1">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonimo"
                android:checked="true"
                android:id="@+id/switchAnonimo"
                android:layout_marginTop="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="17dp"
                android:layout_marginEnd="17dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/switchAnonimo"
                android:id="@+id/layoutTags"
                android:layout_above="@+id/btnEnviarPergunta"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tags:"
                    android:textSize="25sp"
                    android:textColor="@color/branco"
                    android:id="@+id/txtTag"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkCinema"
                    android:textSize="20sp"
                    android:layout_below="@id/txtTag"
                    android:id="@+id/chkCinema"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkEsporte"
                    android:textSize="20sp"
                    android:layout_below="@id/chkCinema"
                    android:id="@+id/chkEsporte"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkMusica"
                    android:textSize="20sp"
                    android:layout_below="@id/chkEsporte"
                    android:id="@+id/chkMusica"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkHumor"
                    android:textSize="20sp"
                    android:layout_below="@id/chkMusica"
                    android:id="@+id/chkHumor"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkCuriosidade"
                    android:textSize="20sp"
                    android:id="@+id/chkCuriosidade"
                    android:layout_above="@+id/chkEsporte"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkSaude"
                    android:textSize="20sp"
                    android:id="@+id/chkSaude"
                    android:layout_below="@+id/chkCuriosidade"
                    android:layout_alignLeft="@+id/chkCuriosidade"
                    android:layout_alignStart="@+id/chkCuriosidade" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk18"
                    android:textSize="20sp"
                    android:id="@+id/chk18"
                    android:layout_below="@+id/chkSaude"
                    android:layout_alignLeft="@+id/chkCuriosidade"
                    android:layout_alignStart="@+id/chkCuriosidade" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkOutros"
                    android:textSize="20sp"
                    android:id="@+id/chkOutros"
                    android:layout_below="@+id/chk18"
                    android:layout_alignLeft="@+id/chkCuriosidade"
                    android:layout_alignStart="@+id/chkCuriosidade" />

            </RelativeLayout>

            <Button
                android:background="@drawable/botao_azul_arrdondado"
                android:text="@string/btnEnviar"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="23dp"
                android:id="@+id/btnEnviarPergunta"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="enviarPergunta" />

            <Button
                android:background="@drawable/botao_azul_arrdondado"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:text="@string/btnCancelar"
                android:id="@+id/btnCancelarPergunta"
                android:layout_alignBottom="@+id/btnEnviarPergunta"
                android:layout_alignParentRight="true"
                android:layout_marginRight="26dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
