<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/corSecundaria"
    tools:context="br.com.private_codx.aprivate.views.ActivityPrincipal">

    <!--Toolbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/toolbar_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_principal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/corPrimaria"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nome_Principal"
                android:textSize="16sp" />

        </android.support.v7.widget.Toolbar>
    </LinearLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar_layout"
        android:layout_alignParentBottom="true">


        <!--Componentes da Activity-->

        <Button
            android:id="@+id/btnPerguntar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPerguntar"
             />

        <Button
            android:id="@+id/btnPesquisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPesquisa"
            android:layout_below="@id/btnPerguntar" />

        <Button
            android:id="@+id/btnPerguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPerguntas"
            android:layout_below="@id/btnPesquisa" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rank"
            android:layout_below="@+id/btnPerguntas" />

        <Button
            android:id="@+id/btnMinhasPerguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minhas"
            android:layout_below="@+id/btnRanking" />

        <Button
            android:id="@+id/btnRecomendadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reco"
            android:layout_below="@+id/btnMinhasPerguntas" />

    </RelativeLayout>




</RelativeLayout>
